--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div {
+   width: 100%;
+   height: 100vh;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+
+}
+
+button {
+
+  padding: 17px 27px;
+  background-color: aquamarine;
+  color: blue;
+  border: 6px skyblue;
+  outline: invert;
+  border-radius: 9px;
+  text-transform: uppercase;
+  cursor: pointer;
+
+
+}
+
+button:hover {
+  background-color: chartreuse;
+}
